2007-06-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RemoveUnused.py (init_gui): Add missing argument.
	* src/GrampsDb/_GrampsInMemDB.py: Rename overridden methods.
	* src/GrampsDb/_GrampsDbBase.py: Rename overridden methods.
	* src/GrampsDb/_GrampsBSDDB.py: Rename overridden methods.
	* src/GrampsDb/_GrampsDBDir.py: Rename overridden methods.

2007-06-25  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_AddrEmbedList.py: pylint
	* src/DisplayTabs/_AddressModel.py: pylint
	* src/DisplayTabs/_WebModel.py: pylint

2007-06-25  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (commit_base): Rename method.
	* src/GrampsDb/_GrampsDBDir.py (commit_base): Rename method.
	* src/GrampsDb/_GrampsDbBase.py: Rename __commit_base into commit
	base: caused problems with python2.4 scoping.

2007-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py (_gen_cooked_func,_gen_raw_func): Do not
	replace %% with anything.

2007-06-24  Don Allingham  <don@gramps-project.org>
	* configure.in: add files
	* src/DataViews/_RelationView.py: fix translation argument
	* src/RelLib/Makefile.am: Add missing files
	* src/plugins/Makefile.am: Add missing files
	* src/DbManager.py: fix translation argument
	* src/Utils.py: fix translation argument
	* src/Filters/Rules/Person/Makefile.am: Add missing files
	* src/Makefile.am: Add missing files

2007-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ReadGrdb.py (importData): Rework to upgrade and
	import a copy of grdb file, leaving the original file untouched.
	* src/GrampsDb/_GrampsBSDDB.py (make_env_name): Add method to
	determine the environment name.

2007-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/BookReport.py (BookReportDialog::__init__): 
	  Fix non text report styles

2007-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/BookReport.py (on_booklist_ok_clicked): Handle unicode names
